Fixed Header spacing
Fixed Header spacing on events, user and play page if no flash

--- a/styles/play/header.css
+++ b/styles/play/header.css
@@ -19,8 +19,9 @@ body {
 
 #inner-header {
 	display: flex;
-	justify-content: space-between;
 	width: 100%;
+	justify-content: space-between;
+	gap: normal;
 }
 
 #penguin-zone-logo {
